--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 coverage==7.6.12
 distro==1.9.0
+duckdb==1.2.1
 durationpy==0.9
 elasticsearch==7.10.0
 elasticsearch-dsl==7.4.1
@@ -63,6 +64,7 @@ requests==2.32.3
 s3transfer==0.11.2
 six==1.17.0
 sniffio==1.3.1
+tabulate==0.9.0
 text-unidecode==1.3
 tiktoken==0.9.0
 tokenizers==0.21.0
@@ -74,6 +76,7 @@ tzdata==2025.1
 urllib3==1.26.20
 vaul==0.2.5
 Werkzeug==2.3.7
+wheel==0.45.1
 wrapt==1.17.2
 yarl==1.18.3
 zappa==0.56.1
