--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       contents: read
     env:
       REPO_NAME: ${{ github.event.repository.name }}
-      S3_BUCKET: textlayer-repositories
+      S3_BUCKET: ${{ secrets.S3_BUCKET }}
 
     steps:
       - uses: actions/checkout@v4
