--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Upload to S3
         run: |
-          DEST="s3://${S3_BUCKET}/${REPO_NAME}/main/${ZIP_FILE}"
+          DEST="s3://${S3_BUCKET}/${REPO_NAME}/${ZIP_FILE}"
           aws s3 cp "$ZIP_FILE" "$DEST" --only-show-errors
           echo "Uploaded to $DEST"
 
