--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,7 @@ jobs:
     env:
       REPO_NAME: ${{ github.event.repository.name }}
       S3_BUCKET: ${{ secrets.S3_BUCKET }}
+      VERSION: ${{ github.event.inputs.version }}
 
     steps:
       - uses: actions/checkout@v4
@@ -34,7 +35,7 @@ jobs:
 
       - name: Upload to S3
         run: |
-          DEST="s3://${S3_BUCKET}/${REPO_NAME}/${ZIP_FILE}"
+          DEST="s3://${S3_BUCKET}/${REPO_NAME}/${ZIP_FILE}-${VERSION}"
           aws s3 cp "$ZIP_FILE" "$DEST" --only-show-errors
           echo "Uploaded to $DEST"
 
