--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,34 @@
 aiohappyeyeballs==2.5.0
 aiohttp==3.11.13
 aiosignal==1.3.2
+altair==5.5.0
 annotated-types==0.7.0
 anyio==4.8.0
 argcomplete==3.5.3
+asttokens==3.0.0
 async-timeout==5.0.1
 attrs==25.1.0
 backoff==2.2.1
 blinker==1.9.0
 boto3==1.36.21
 botocore==1.36.21
+cachetools==6.1.0
 certifi==2025.1.31
 cfn-flip==1.3.0
 charset-normalizer==3.4.1
 click==8.1.8
+comm==0.2.2
 coverage==7.6.12
+debugpy==1.8.14
+decorator==5.2.1
 distro==1.9.0
 duckdb==1.2.1
 durationpy==0.9
 elasticsearch==7.10.0
 elasticsearch-dsl==7.4.1
 exceptiongroup==1.2.2
+executing==2.2.0
+faiss-cpu==1.11.0
 filelock==3.17.0
 Flask==2.2.3
 Flask-Cors==5.0.0
@@ -28,6 +36,8 @@ Flask-Mail==0.10.0
 flask-marshmallow==1.2.1
 frozenlist==1.5.0
 fsspec==2025.3.0
+gitdb==4.0.12
+GitPython==3.1.44
 h11==0.14.0
 hjson==3.1.0
 httpcore==1.0.7
@@ -35,46 +45,80 @@ httpx==0.28.1
 huggingface-hub==0.29.2
 idna==3.10
 importlib_metadata==8.6.1
+ipykernel==6.29.5
+ipython==9.3.0
+ipython_pygments_lexers==1.1.1
 itsdangerous==2.2.0
+jedi==0.19.2
 Jinja2==3.1.5
 jiter==0.8.2
 jmespath==1.0.1
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
 kappa==0.6.0
 langfuse==2.60.0
 litellm==1.30.3
 MarkupSafe==3.0.2
 marshmallow==3.26.1
+matplotlib-inline==0.1.7
 multidict==6.1.0
+narwhals==1.44.0
+nest-asyncio==1.6.0
 numpy==2.0.2
 openai==1.65.4
 packaging==24.2
 pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
+pillow==11.2.1
 placebo==0.9.0
+platformdirs==4.3.8
+prompt_toolkit==3.0.51
 propcache==0.3.0
+protobuf==6.31.1
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==20.0.0
 pydantic==2.6.4
 pydantic_core==2.16.3
+pydeck==0.9.1
+Pygments==2.19.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-slugify==8.0.4
 pytz==2025.1
 PyYAML==6.0.2
+pyzmq==27.0.0
 ratelimiter==1.2.0.post0
+referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
+rpds-py==0.25.1
 s3transfer==0.11.2
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
+stack-data==0.6.3
+streamlit==1.46.0
 tabulate==0.9.0
+tenacity==9.1.2
 text-unidecode==1.3
 tiktoken==0.9.0
 tokenizers==0.21.0
 toml==0.10.2
+tornado==6.5.1
 tqdm==4.67.1
+traitlets==5.14.3
 troposphere==4.9.0
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==1.26.20
 vaul==0.2.5
+watchdog==6.0.0
+wcwidth==0.2.13
 Werkzeug==2.3.7
 wheel==0.45.1
 wrapt==1.17.2
